--- a/comparison.html
+++ b/comparison.html
@@ -40,39 +40,33 @@
       </ul>
 
   </nav>
+
+
   <div class="container">
-    
     <div class="row">
-        <div class="col-md-8">
-          <div class="thumbnail">
-            <h3 class="text-left">Latitude vs Cloudiness (01/05/17)</h3>
-            <hr>
-            <div class="thumbnail"></div>
-              <img class="img-thumbnail float-left" src="C:\Users\byrne\Homework\Web-Design-Challenge\visualizations\LatvsCloudiness.png" alt="MaxTemperature" width="65% class="img-thumbnail">
-            </div>
-            <div class="caption">
-               <p>The fact that there are "horiontal lines" across indicates that cloudiness is not an exact measurement and more subjective. there is a fairly even distribution across the hemispheres of all cloudiness ranges.</p>
-                 
-            </div>
-        </div>
-        <div class="col-md-4">
-          <h3 class="text-left">Visualizations</h3>
-                 <!-- Row 3 -->
+
+          <h3 class="text-left">Comparison: Latitude vs X</h3>
+
+<div class="container"> 
   <div class="row">
-      <div class="col-md-6">
-          <a href="maxtemperature.html"><img src="C:\Users\byrne\Homework\Web-Design-Challenge\visualizations\LatvsTemp.png" alt="maxtemperature" class="img-thumbnail">
+      <div class="col-lg-6 col-md-12"  style="padding: 30px;">
+        <div class="panel">Latitude vs. Max Temperature</div>
+          <a href="maxtemperature.html"><img  src="C:\Users\byrne\Homework\Web-Design-Challenge\visualizations\LatvsTemp.png"  width="100%" alt="maxtemperature" ></a>   
            </div>
 
-      <div class="col-md-6">
-          <a href="cloudiness.html"><img src="C:\Users\byrne\Homework\Web-Design-Challenge\visualizations\LatvsCloudiness.png" alt="cloudiness" class="img-thumbnail">
+      <div class="col-lg-6 col-md-12"  style="padding: 30px;">
+        <div class="panel">Latitude vs. Humidity</div>
+          <a href="cloudiness.html"><img  src="C:\Users\byrne\Homework\Web-Design-Challenge\visualizations\LatvsCloudiness.png" width="100%" alt="cloudiness" ></a>   
       </div>
 
-      <div class="col-md-6">
-          <a href="humidity.html"><img src="C:\Users\byrne\Homework\Web-Design-Challenge\visualizations\LatvsHumidity.png" alt="humidity" class="img-thumbnail">
+      <div class="col-lg-6 col-md-12"  style="padding: 30px;">
+        <div class="panel">Latitude vs. Cloudiness</div>
+          <a href="humidity.html"><img src="C:\Users\byrne\Homework\Web-Design-Challenge\visualizations\LatvsHumidity.png" width="100%" alt="humidity" ></a>   
       </div>
 
-      <div class="col-md-6">
-          <a href="windspeed.html"><img src="C:\Users\byrne\Homework\Web-Design-Challenge\visualizations\LatvsWindSpeed.png" alt="windspeed" class="img-thumbnail">
+      <div class="col-lg-6 col-md-12"  style="padding: 30px;">
+        <div class="panel">Latitude vs. Wind Speed</div>
+          <a href="windspeed.html"><img src="C:\Users\byrne\Homework\Web-Design-Challenge\visualizations\LatvsWindSpeed.png" width="100%" alt="windspeed" ></a>   
       </div>
 
 
